objects/Release_Deliverable__c.object
<CustomObject>
    <fields>
        <fullName>Conditional_Text__c</fullName>
        <label>Conditional Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conditional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deliverable_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Deliverable ID</label>
        <referenceTo>Deliverable__c</referenceTo>
        <relationshipLabel>Deliverables</relationshipLabel>
        <relationshipName>Release_Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliverable_Name__c</fullName>
        <formula>Deliverable_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Deliverable Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Release_Deliverable__c</fullName>
        <label>Duplicate Release Deliverable</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offering_Release__c</fullName>
        <label>Project ID</label>
        <referenceTo>Offering_Release__c</referenceTo>
        <relationshipLabel>Deliverables</relationshipLabel>
        <relationshipName>Release_Deliverables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release_Deliverable_Name__c</fullName>
        <label>Deliverable Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <formula>Offering_Release__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Criteria__c</fullName>
        <label>Review Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reviewer1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Deliverables1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewer3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Deliverables2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stage Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tailoring_Justification__c</fullName>
        <label>Tailoring Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Deliverable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000000000}</displayFormat>
        <label>Deliverable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliverables</pluralLabel>
    <recordTypes>
        <fullName>Attachment</fullName>
        <active>false</active>
        <label>Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Link</fullName>
        <active>true</active>
        <label>Link</label>
    </recordTypes>
    <recordTypes>
        <fullName>Text</fullName>
        <active>false</active>
        <label>Text</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ODP_VR_TailoringJustification_Deliverabl</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Include__c),NOT(ISCHANGED(Tailoring_Justification__c )) )</errorConditionFormula>
        <errorDisplayField>Tailoring_Justification__c</errorDisplayField>
        <errorMessage>When field INCLUDE changed, Please Provide Tailoring Justification</errorMessage>
    </validationRules>
</CustomObject>